# failurebase

./: .gitignore  pyproject.toml
environment/: .env.development  .env.example  .env.test
requirements/: base.txt  utest.txt
src/failurebase/: __init__.py  __main__.py  application.py  containers.py  settings.py  utils.py
src/failurebase/adapters/: database.py  exceptions.py  models.py
src/failurebase/adapters/repositories/: api_key.py  base.py  client.py  event.py  test.py
src/failurebase/cli/: dispatcher.py  utils.py
src/failurebase/cli/commands/: api_key.py  base.py  configuration.py  frontend.py
src/failurebase/endpoints/: api.py  validators.py
src/failurebase/endpoints/auth/: handlers.py  utils.py
src/failurebase/endpoints/client/: handlers.py  validators.py
src/failurebase/endpoints/event/: handlers.py  validators.py
src/failurebase/endpoints/test/: __init__.py  handlers.py  validators.py
src/failurebase/managers/: secret.py  token.py
src/failurebase/resources/frontend/: asset-manifest.json  index.html
src/failurebase/resources/logging/: default.conf
src/failurebase/schemas/: api_key.py  auth.py  client.py  common.py  event.py  test.py
src/failurebase/services/: api_key.py  client.py  event.py  test.py  uow.py
src/failurebase/services/api_key/: service.py  uow.py
src/failurebase/services/base/: service.py  uow.py
tests/: utest.db
tests/utests/: conftest.py  data.py
tests/utests/cli/: test_commands.py
tests/utests/client/: test_endpoints.py
tests/utests/event/: test_endpoints.py
tests/utests/test/: test_endpoints.py
(+54 files in other folders)
